fixed overflow of card, fixes #223

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -221,7 +221,7 @@ body {
   font-size: 14px;
   background: #F5F5F5;
   color: #0B0F15;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   & > div {
     margin: 0 20px 10px;
